--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5000
 URI = mongodb://127.0.0.1:28000/TA
+SURI = mongodb+srv://tugas:admin@cluster0.grdk5.mongodb.net/TA?retryWrites=true&w=majority
 TOKEN = SOTOBETAWI
+
