--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "sharp": "^0.29.2"
   }
 }
