--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT = 3000
+PORT = 5000
+PORTs = 3000
 URI = mongodb://127.0.0.1:28000/TA
 SURI = mongodb+srv://tugas:admin@cluster0.grdk5.mongodb.net/TA?retryWrites=true&w=majority
 AURI = mongodb://fosan:batch6@47.241.69.185:3306/TA
